# swarm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish_crate.yml  publish_pypackage.yml
examples/: himmelblau_so.rs
src/: error.rs  lib.rs  nsga.rs  particle_swarm.rs
swarm/: Cargo.toml
swarm/examples/: binh_korn_mo.rs  himmelblau_so.rs  plot_pareto.py
swarm/src/: initialisation.rs  lib.rs  nsga.rs  pso.rs
swarm/tests/: binh_korn_test.rs  constrained_quadratic_test.rs  himmelblau_test.rs  zdt1_benchmark_test.rs
swarm_py/: Cargo.toml  pyproject.toml
swarm_py/benches/: blackbox_par_bench.py  plot_results.py  plot_results_par.py  requirements.txt  run_bench.sh  zdt1_bench.py
swarm_py/examples/: binh_korn.py  himmelblau.py  requirements.txt  zdt1.py
swarm_py/src/: lib.rs  nsga.rs  pso.rs
swarm_py/tests/: test_import.py
tests/: constrained_quadratic_test.rs  himmelblau_test.rs  zdt1_benchmark_test.rs
